# CPP.Calculator

./: .gitignore  CMakeLists.txt  README.md  a.out  calculator.cpp  calculator.h  main.cpp  tests.cpp
qt/CPPCalc/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
src/: CMakeLists.txt  calculator.cpp  calculator.h  expr-proc.cpp  expr-proc.h  tests.cpp
src/ops/: arithmetic.cpp  arithmetic.h  arithmetics.cpp  negation.cpp  operations.h  sqrt.cpp  sqrt.h
